package com.sgl.model.enums;

public enum StatusPedido {
	
	PENDENTE,
	APROVADO,
	REJEITADO,
	ENTREGUE,
	CANCELADO
	
}
