package com.sgl.model.enums;

public enum TipoMovimentacao {

	    ENTRADA,

	    SAIDA,

	    AJUSTE,

	    DEVOLUCAO
	
}
