CREATE TABLE unidades (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nome VARCHAR(255) NOT NULL,
    sigla VARCHAR(255) NOT NULL UNIQUE
);

CREATE TABLE produtos (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nome VARCHAR(255) NOT NULL,
    descricao VARCHAR(255),
    codigo_referencia VARCHAR(255) UNIQUE,

    unidade_medida VARCHAR(255) NOT NULL,
    localizacao_fisica VARCHAR(255),

    risco VARCHAR(255) NOT NULL,
    tipo_risco VARCHAR(255),
    descricao_risco VARCHAR(255),

    perecivel BOOLEAN NOT NULL,
    tipo_perecivel VARCHAR(255),

    condicoes_armazenamento VARCHAR(255),
    unidade_armazenamento VARCHAR(255),

    ativo BOOLEAN NOT NULL
);

CREATE TABLE laboratorios (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

    unidade_id BIGINT NOT NULL,

    nome VARCHAR(255) NOT NULL,
    descricao VARCHAR(255),

    responsavel_id BIGINT,

    ativo BOOLEAN NOT NULL,

    CONSTRAINT fk_laboratorio_unidade
        FOREIGN KEY (unidade_id)
        REFERENCES unidades(id)
);

CREATE TABLE usuarios (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

    nome VARCHAR(255) NOT NULL,
    email VARCHAR(255) NOT NULL UNIQUE,
    senha VARCHAR(255) NOT NULL,
    perfil VARCHAR(255) NOT NULL,

    unidade_id BIGINT,
    laboratorio_id BIGINT,

    ativo BOOLEAN NOT NULL,

    CONSTRAINT fk_usuario_unidade
        FOREIGN KEY (unidade_id)
        REFERENCES unidades(id),

    CONSTRAINT fk_usuario_laboratorio
        FOREIGN KEY (laboratorio_id)
        REFERENCES laboratorios(id)
);

ALTER TABLE laboratorios
ADD CONSTRAINT fk_laboratorio_responsavel
FOREIGN KEY (responsavel_id)
REFERENCES usuarios(id);

CREATE TABLE estagiarios (
    id BIGINT PRIMARY KEY,

    data_inicio_estagio DATE NOT NULL,
    data_fim_estagio DATE,

    tipo_bolsa VARCHAR(255) NOT NULL,

    observacao VARCHAR(255),

    CONSTRAINT fk_estagiario_usuario
        FOREIGN KEY (id)
        REFERENCES usuarios(id)
);

CREATE TABLE estoque_central (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

    unidade_id BIGINT NOT NULL,
    produto_id BIGINT NOT NULL,

    quantidade_atual INTEGER NOT NULL,
    quantidade_minima INTEGER NOT NULL,

    ativo BOOLEAN NOT NULL,

    CONSTRAINT fk_estoque_unidade
        FOREIGN KEY (unidade_id)
        REFERENCES unidades(id),

    CONSTRAINT fk_estoque_produto
        FOREIGN KEY (produto_id)
        REFERENCES produtos(id),

    CONSTRAINT uk_estoque_unidade_produto
        UNIQUE (unidade_id, produto_id)
);

CREATE TABLE lote (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

    estoque_central_id BIGINT NOT NULL,

    numero_lote VARCHAR(100) NOT NULL,

    quantidade_inicial INTEGER NOT NULL,
    quantidade_disponivel INTEGER NOT NULL,

    data_entrada DATE NOT NULL,
    data_validade DATE,

    ativo BOOLEAN NOT NULL,

    CONSTRAINT fk_lote_estoque_central
        FOREIGN KEY (estoque_central_id)
        REFERENCES estoque_central(id),

    CONSTRAINT uk_lote_estoque_numero
        UNIQUE (estoque_central_id, numero_lote)
);

CREATE TABLE projetos (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

    laboratorio_id BIGINT NOT NULL,

    nome VARCHAR(255) NOT NULL,
    descricao VARCHAR(255),

    data_inicio DATE,
    data_fim DATE,

    responsavel VARCHAR(255),

    ativo BOOLEAN NOT NULL,

    CONSTRAINT fk_projeto_laboratorio
        FOREIGN KEY (laboratorio_id)
        REFERENCES laboratorios(id)
);

CREATE TABLE pedidos (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

    usuario_id BIGINT NOT NULL,
    laboratorio_id BIGINT NOT NULL,
    projeto_id BIGINT,

    data_solicitacao TIMESTAMP NOT NULL,

    status VARCHAR(255) NOT NULL,

    observacao VARCHAR(255),
    arquivo_documento VARCHAR(255),

    CONSTRAINT fk_pedido_usuario
        FOREIGN KEY (usuario_id)
        REFERENCES usuarios(id),

    CONSTRAINT fk_pedido_laboratorio
        FOREIGN KEY (laboratorio_id)
        REFERENCES laboratorios(id),

    CONSTRAINT fk_pedido_projeto
        FOREIGN KEY (projeto_id)
        REFERENCES projetos(id)
);

CREATE TABLE itens_pedido (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

    pedido_id BIGINT NOT NULL,
    produto_id BIGINT NOT NULL,

    quantidade_solicitada INTEGER NOT NULL,
    quantidade_aprovada INTEGER,

    CONSTRAINT fk_item_pedido
        FOREIGN KEY (pedido_id)
        REFERENCES pedidos(id),

    CONSTRAINT fk_item_produto
        FOREIGN KEY (produto_id)
        REFERENCES produtos(id)
);

CREATE TABLE movimentacao_estoque (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

    produto_id BIGINT NOT NULL,
    laboratorio_id BIGINT,
    usuario_id BIGINT NOT NULL,
    pedido_id BIGINT,
    lote_id BIGINT,
    estoque_central_id BIGINT NOT NULL,

    tipo_movimentacao VARCHAR(255) NOT NULL,
    origem VARCHAR(255) NOT NULL,

    quantidade_movimentada INTEGER NOT NULL,
    quantidade_anterior INTEGER NOT NULL,
    quantidade_atual INTEGER NOT NULL,

    data_movimentacao TIMESTAMP NOT NULL,

    observacao VARCHAR(255),

    CONSTRAINT fk_movimentacao_produto
        FOREIGN KEY (produto_id)
        REFERENCES produtos(id),

    CONSTRAINT fk_movimentacao_laboratorio
        FOREIGN KEY (laboratorio_id)
        REFERENCES laboratorios(id),

    CONSTRAINT fk_movimentacao_usuario
        FOREIGN KEY (usuario_id)
        REFERENCES usuarios(id),

    CONSTRAINT fk_movimentacao_pedido
        FOREIGN KEY (pedido_id)
        REFERENCES pedidos(id),

    CONSTRAINT fk_movimentacao_lote
        FOREIGN KEY (lote_id)
        REFERENCES lote(id),

    CONSTRAINT fk_movimentacao_estoque
        FOREIGN KEY (estoque_central_id)
        REFERENCES estoque_central(id)
);

CREATE TABLE historico_laboratorio (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

    laboratorio_id BIGINT NOT NULL,
    produto_id BIGINT NOT NULL,
    pedido_id BIGINT NOT NULL,

    quantidade INTEGER NOT NULL,
    data_recebimento DATE NOT NULL,

    ativo BOOLEAN NOT NULL,

    CONSTRAINT fk_historico_laboratorio
        FOREIGN KEY (laboratorio_id)
        REFERENCES laboratorios(id),

    CONSTRAINT fk_historico_produto
        FOREIGN KEY (produto_id)
        REFERENCES produtos(id),

    CONSTRAINT fk_historico_pedido
        FOREIGN KEY (pedido_id)
        REFERENCES pedidos(id)
);