@startuml Estoque_Laboratorios

' ============================================
' Diagrama de Classes - Projeto STOCK
' Gestão de Estoque para Laboratórios
' ============================================

skinparam classAttributeIconSize 0
skinparam linetype ortho

' ============================================
' Enumerações
' ============================================

enum TipoUsuario {
    PESQUISADOR
    ESTUDANTE
    ESTAGIARIO
    GESTOR
    ADMIN
}

enum CategoriaProduto {
    PERECIVEL
    PERMANENTE
    CONSUMIVEL
}

enum StatusPedido {
    PENDENTE
    APROVADO
    REJEITADO
    ENTREGUE
    CANCELADO
}

enum TipoMovimentacao {
    ENTRADA
    SAIDA
    TRANSFERENCIA
    AJUSTE
}

' ============================================
' Classes Principais
' ============================================

class Unidade {
    +Long id
    +String nome
    +String codigo
    +String endereco
    +String telefone
    +String email
    +Boolean ativo
    +LocalDateTime dataCriacao
}

class Laboratorio {
    +Long id
    +Long unidade_id
    +String nome
    +String descricao
    +String responsavelNome
    +String responsavelEmail
    +Boolean ativo
    +LocalDateTime dataCriacao
}

class Usuario {
    +Long id
    +Long unidade_id
    +Long laboratorio_id
    +String nome
    +String email
    +String senhaHash
    +TipoUsuario tipo
    +Boolean ativo
    +LocalDateTime dataCriacao
}

class Produto {
    +Long id
    +Long unidade_id
    +String nome
    +String descricao
    +String codigo
    +CategoriaProduto categoria
    +Integer quantidadeAtual
    +Integer quantidadeMinima
    +String unidadeMedida
    +String localizacao
    +Boolean ativo
    +LocalDateTime dataCriacao
}

class Lote {
    +Long id
    +Long produto_id
    +String numeroLote
    +LocalDate dataFabricacao
    +LocalDate dataValidade
    +Integer quantidade
    +Boolean ativo
    +LocalDateTime dataCriacao
}

class Projeto {
    +Long id
    +Long unidade_id
    +String nome
    +String descricao
    +String responsavel
    +LocalDate dataInicio
    +LocalDate dataFim
    +Boolean ativo
    +LocalDateTime dataCriacao
}

class Pedido {
    +Long id
    +Long unidade_id
    +Long laboratorio_id
    +Long usuario_id
    +Long projeto_id
    +LocalDateTime dataSolicitacao
    +LocalDateTime dataAprovacao
    +StatusPedido status
    +String observacao
    +String justificativa
    +String arquivoDocumento
    +LocalDateTime dataCriacao
}

class ItemPedido {
    +Long id
    +Long pedido_id
    +Long produto_id
    +Long lote_id
    +Integer quantidadeSolicitada
    +Integer quantidadeAprovada
    +String observacao
}

class Movimentacao {
    +Long id
    +Long unidade_id
    +Long produto_id
    +Long lote_id
    +TipoMovimentacao tipo
    +Integer quantidade
    +Long pedido_id
    +Long usuario_id
    +LocalDateTime dataMovimentacao
    +String observacao
}

' ============================================
' Relacionamentos
' ============================================

Unidade "1" -- "*" Laboratorio : possui >
Unidade "1" -- "*" Usuario : possui >
Unidade "1" -- "*" Produto : possui >
Unidade "1" -- "*" Projeto : possui >

Laboratorio "1" -- "*" Usuario : abriga >
Laboratorio "1" -- "*" Pedido : recebe >

Usuario "1" -- "*" Pedido : realiza >
Usuario "1" -- "*" Movimentacao : registra >

Produto "1" -- "*" Lote : possui >
Produto "1" -- "*" ItemPedido : incluido em >
Produto "1" -- "*" Movimentacao : movimentado >

Lote "1" -- "*" ItemPedido : pode ser >
Lote "1" -- "*" Movimentacao : pode ser >

Projeto "1" -- "*" Pedido : vinculado a >

Pedido "1" -- "*" ItemPedido : contem >
Pedido "1" -- "*" Movimentacao : gera >

' ============================================
' Notas
' ============================================

note right of Unidade
  <b>Tenant</b>
  Cada unidade é uma
  instituição/organização
end note

note right of Laboratorio
  <b>Pertence à Unidade</b>
  Cada lab é vinculado
  a uma unidade
end note

note left of Usuario
  <b>3 tipos principais:</b>
  - Pesquisador/Estudante
  - Gestor (Depto)
  - Admin
end note

note bottom of Produto
  <b>Categorias:</b>
  - Perecível (com lote)
  - Permanente
  - Consumível
end note

note right of Lote
  <b>Opcional</b>
  Usado apenas para
  produtos perecíveis
end note

note bottom of Pedido
  <b>Projeto é opcional</b>
  Laboratório é obrigatório
end note

note left of Movimentacao
  <b>Registra todas as
  movimentações do estoque</b>
end note

@enduml
